# libts

./: CMakeLists.txt  README.md
include/: ts.h  ts.hpp  ts_sys.h
src/: ts_common_operations.c  ts_interpolation.c  ts_math.c  ts_sys_libc.c
test/: common.h  interpolation.c  main.c  math.c  test_interpolation.c  tests.h  ts_interpolation_test.c
